--- a/app/views/fulfillments/_report_result.html.erb
+++ b/app/views/fulfillments/_report_result.html.erb
@@ -2,11 +2,11 @@
 
 <table class="table table-bordered table-condensed">
 	<thead>
-		<th>id</th>
-		<th>product</th>
-		<th>trancking_code</th>
-		<th>status</th>
-		<th>actions</th>
+	  <th> <%= t('activerecord.attributes.fulfillment.id') %> </th>
+	  <th> <%= t('activerecord.attributes.fulfillment.product') %> </th>
+	  <th> <%= t('activerecord.attributes.fulfillment.tracking_code') %> </th>    
+    <th> <%= t('activerecord.attributes.fulfillment.status') %> </th>
+	  <th> <%= t('actions') %> </th>    
 	</thead>
 	<tbody>
 		<% @fulfillments.each do |fulfillment| %>
@@ -15,7 +15,7 @@
 			<td> <%= fulfillment.product %> </td>
 			<td> <%= fulfillment.tracking_code %> </td>
 			<td> <%= fulfillment.status %> </td>
-			<% if fulfillment.status == 'processing' %>
+			<% if fulfillment.processing? %>
         <td><%= link_to 'Mark as sent', '#', :id => "mark_as_sent", :name => "#{fulfillment.id}",
       		      :class=> "btn btn-small"%></td>
         <td>
