refs #21771 - added undeliverable logic

--- a/app/views/fulfillments/_report_result.html.erb
+++ b/app/views/fulfillments/_report_result.html.erb
@@ -25,7 +25,7 @@
             		<%= t('activerecord.attributes.member.undeliverable') %>
             	<% end %>
             </td>
-    			<% else fulfillment.out_of_stock? %>
+    			<% elsif fulfillment.out_of_stock? or fulfillment.undeliverable? %>
             <td>Actual stock: <%= fulfillment.product.stock %>. <%= link_to 'Resend','#', :id => 'resend', :name => fulfillment.id ,:class=> "btn btn-small" %></td>
          	<% end %>
     		</tr>
