refs #21771 - added mark as sent logic

--- a/app/views/fulfillments/_report_result.html.erb
+++ b/app/views/fulfillments/_report_result.html.erb
@@ -15,10 +15,12 @@
     			<td> <%= fulfillment.tracking_code %> </td>
     			<td> <%= fulfillment.status %> </td>
     			<% if fulfillment.processing? %>
-            <td NOWRAP><%= link_to 'Mark as sent', '#', :id => "mark_as_sent", :name => fulfillment.id,
-          		      :class=> "btn btn-small"%>
-            	<% unless fulfillment.member.wrong_address %>
+            <td NOWRAP>
+              <% unless fulfillment.member.wrong_address %>
+                <%= link_to 'Mark as sent', '#', :id => "mark_as_sent", :name => fulfillment.id, :class=> "btn btn-small" %>
+
             		<%= select_tag "reason", options_for_select([Settings.wrong_address.undeliverable_all, Settings.wrong_address.undeliverable_sloop, Settings.wrong_address.undeliverable_kit_card]), :id => "reason_#{fulfillment.id}" %>
+
           			<%= link_to 'Mark as wrong address','#', :id => "mark_as_wrong_address", 
             	    :name => fulfillment.id, :class=> "btn btn-small" %>
             	<% else %>
