--- a/app/views/fulfillments/_report_result.html.erb
+++ b/app/views/fulfillments/_report_result.html.erb
@@ -27,7 +27,7 @@
         		<%= t('activerecord.attributes.member.undeliverable') %>
         	<% end %>
         </td>
-			<% elsif  %>
+			<% elsif Product.find_by_sku_and_club_id(fulfillment.product_sku,@current_club).check_if_there_is_stock_left %>
         <td><%= link_to 'Resend','#', :id => 'resend', :name => "#{fulfillment.id}" ,:class=> "btn btn-small" %></td>
      	<% end %>
 		</tr>
