ref#21771-fixed name of product_sku on members#fulfillments view

--- a/app/views/members/_fulfillments.html.erb
+++ b/app/views/members/_fulfillments.html.erb
@@ -17,7 +17,7 @@
         	  class="ligthgreen" 
        		 <% end %> >
         <td> <%= I18n.l fulfillment.assigned_at, :format => :long %> </td>
-        <td> <%= fulfillment.product %> </td>
+        <td> <%= fulfillment.product_sku %> </td>
         <td> <%= I18n.l fulfillment.renewable_at, :format => :long unless fulfillment.renewable_at.nil? %> </td>
         <td> <%= fulfillment.status %> </td>
         <td>
