refs #21771 - td for actions should be always visible.

--- a/app/views/fulfillments/_report_result.html.erb
+++ b/app/views/fulfillments/_report_result.html.erb
@@ -14,8 +14,8 @@
     			<td> <%= fulfillment.product_sku %> </td>
     			<td> <%= fulfillment.tracking_code %> </td>
     			<td> <%= fulfillment.status %> </td>
-    			<% if fulfillment.processing? %>
-            <td NOWRAP>
+          <td NOWRAP>
+      			<% if fulfillment.processing? %>
               <% unless fulfillment.member.wrong_address %>
                 <%= link_to 'Mark as sent', '#', :id => "mark_as_sent", :name => fulfillment.id, :class=> "btn btn-small" %>
                 -----
@@ -25,10 +25,10 @@
             	<% else %>
             		<%= t('activerecord.attributes.member.undeliverable') %>
             	<% end %>
-            </td>
-    			<% elsif fulfillment.out_of_stock? or fulfillment.undeliverable? %>
-            <td>Actual stock: <%= fulfillment.product.stock %>. <%= link_to 'Resend','#', :id => 'resend', :name => fulfillment.id ,:class=> "btn btn-small" %></td>
-         	<% end %>
+      			<% elsif fulfillment.out_of_stock? or fulfillment.undeliverable? %>
+              Actual stock: <%= fulfillment.product.stock %>. <%= link_to 'Resend','#', :id => 'resend', :name => fulfillment.id ,:class=> "btn btn-small" %>
+           	<% end %>
+          </td>
     		</tr>
   		<% end %>
   	</tbody>
