--- a/app/views/fulfillments/_report_result.html.erb
+++ b/app/views/fulfillments/_report_result.html.erb
@@ -2,6 +2,9 @@
   <table class="table table-bordered table-condensed">
   	<thead>
   	  <th> <%= t('activerecord.attributes.fulfillment.id') %> </th>
+      <th> <%= t('activerecord.attributes.fulfillment.member') %> </th>
+      <th> <%= t('activerecord.attributes.fulfillment.asigned_at') %> </th>
+      <th> <%= t('activerecord.attributes.fulfillment.renewable_at') %> </th>   
   	  <th> <%= t('activerecord.attributes.fulfillment.product_sku') %> </th>
   	  <th> <%= t('activerecord.attributes.fulfillment.tracking_code') %> </th>    
       <th> <%= t('activerecord.attributes.fulfillment.status') %> </th>
@@ -11,6 +14,9 @@
   		<% @fulfillments.each do |fulfillment| %>
     		<tr>
     			<td> <%= fulfillment.id %> </td>
+          <td> <%= fulfillment.member.full_name %> </td>
+          <td> <%= fulfillment.asigned_at %> </td>
+          <td> <%= fulfillment.renewable_at %> </td>
     			<td> <%= fulfillment.product_sku %> </td>
     			<td> <%= fulfillment.tracking_code %> </td>
     			<td> <%= fulfillment.status %> </td>
