--- a/app/views/fulfillments/_report_result.html.erb
+++ b/app/views/fulfillments/_report_result.html.erb
@@ -3,7 +3,7 @@
   	<thead>
   	  <th> <%= t('activerecord.attributes.fulfillment.id') %> </th>
       <th> <%= t('activerecord.attributes.fulfillment.member') %> </th>
-      <th> <%= t('activerecord.attributes.fulfillment.asigned_at') %> </th>
+      <th> <%= t('activerecord.attributes.fulfillment.assigned_at') %> </th>
       <th> <%= t('activerecord.attributes.fulfillment.renewable_at') %> </th>   
   	  <th> <%= t('activerecord.attributes.fulfillment.product_sku') %> </th>
   	  <th> <%= t('activerecord.attributes.fulfillment.tracking_code') %> </th>    
@@ -15,8 +15,8 @@
     		<tr>
     			<td> <%= fulfillment.id %> </td>
           <td> <%= fulfillment.member.full_name %> </td>
-          <td> <%= fulfillment.asigned_at %> </td>
-          <td> <%= fulfillment.renewable_at %> </td>
+          <td> <%= I18n.l fulfillment.assigned_at, :format => :long %> </td>
+          <td> <%= I18n.l fulfillment.renewable_at, :format => :long unless fulfillment.renewable_at.nil? %> </td>
     			<td> <%= fulfillment.product_sku %> </td>
     			<td> <%= fulfillment.tracking_code %> </td>
     			<td> <%= fulfillment.status %> </td>
@@ -32,7 +32,7 @@
             		<%= t('activerecord.attributes.member.undeliverable') %>
             	<% end %>
       			<% elsif fulfillment.out_of_stock? %>
-              Actual stock: <%= fulfillment.product.stock %>. <%= link_to 'Resend','#', :id => 'resend', :name => fulfillment.id ,:class=> "btn btn-small" %>
+              Actual stock: <%= fulfillment.product.stock unless fulfillment.product.nil? %>. <%= link_to 'Resend','#', :id => 'resend', :name => fulfillment.id ,:class=> "btn btn-small" %>
            	<% end %>
           </td>
     		</tr>
