--- a/app/views/members/set_undeliverable.html.erb
+++ b/app/views/members/set_undeliverable.html.erb
@@ -1,23 +1,6 @@
 <%= render :partial => "shared/member_information" %>
 
 
-<%= form_for(member_set_undeliverable_path) do %>
-  <table class="table table-bordered">
-    <thead>
-    <tr>
-      <th>
-        <%= label :reason, t('reason'), :class => 'help-inline' %> 
-        <%= select_tag "reason", options_for_select([Settings.wrong_address.undeliverable_all, Settings.wrong_address.undeliverable_sloop,
-        Settings.wrong_address.undeliverable_kit_card]) %>
-      </th>
-    </tr>
-    <tr>
-    <th> 
-      <%= submit_tag t('buttons.set_wrong_addres'), :class => 'btn btn-primary', 
-                               :confirm => t('are_you_sure') %>
-      <%= link_to t('buttons.return_to_member_show'), show_member_path, :class => 'btn' %> 
-    </th>
-    </tr>
-    </thead>
-  </table>
-<% end %>
+<%= render :partial => "set_undeliverable_form" %>
+
+<%= link_to t('buttons.return_to_member_show'), show_member_path, :class => 'btn' %> 
