--- a/app/views/admin/agents/my_clubs.html.erb
+++ b/app/views/admin/agents/my_clubs.html.erb
@@ -15,20 +15,35 @@
       <th> <%= t('actions') %> </th>
     </tr>
   </thead>
-  <tbody>
-  	<% @my_roles.each do |role| %>
-    <tr>
-      <td><%= link_to role.club_id, club_path(role.club.partner.prefix,role.club) %></td>
-      <td><%= role.role %></td> 	
-      <td><%= role.club.name %></td>
-      <td><%= role.club.description %></td>
-      <td><%= role.club.members.count %></td>   	
-      <td>
-        <% if role.agent.has_role? 'admin' %>
-          <%= link_to t('activerecord.model.fulfillments'), fulfillments_path(role.club.partner.prefix,role.club.name), :class => 'btn btn-mini'%>
-        <% end %>
-      </td> 
-  	</tr>
+  <tbody
+    <% if @clubs %>
+      <% @clubs.each do |club| %>
+      <tr>
+        <td><%= link_to club.id, club_path(club.partner.prefix,club.id) %></td>
+        <td><%= 'admin' %></td>   
+        <td><%= club.name %></td>
+        <td><%= club.description %></td>
+        <td><%= club.members.count %></td>     
+        <td>
+          <%= link_to t('activerecord.model.fulfillments'), fulfillments_index_path(club.partner.prefix,club.name), :class => 'btn btn-mini'%>
+        </td> 
+      </tr>
+      <% end %>
+    <% else %> 
+      <% @my_roles.each do |role| %>
+      <tr>
+        <td><%= link_to role.club_id, club_path(role.club.partner.prefix,role.club) %></td>
+        <td><%= role.role %></td>   
+        <td><%= role.club.name %></td>
+        <td><%= role.club.description %></td>
+        <td><%= role.club.members.count %></td>     
+        <td>
+          <% if role.agent.has_role? 'admin' %>
+            <%= link_to t('activerecord.model.fulfillments'), fulfillments_index_path(role.club.partner.prefix,role.club.name), :class => 'btn btn-mini'%>
+          <% end %>
+        </td> 
+      </tr>
+      <% end %>
     <% end %>
   </tbody>
 </table>
