adding TODOs on controller. removing line in controller that was unused (applied). fixing tabs

--- a/app/views/members/_sync_status.html.erb
+++ b/app/views/members/_sync_status.html.erb
@@ -43,7 +43,7 @@
   </div>
   <table class='hidden_table_border'>
     <tr>
-      <td><%= t('activerecord.attributes.member.api_id') %>:</td>
+      <td NOWRAP><%= t('activerecord.attributes.member.api_id') %>:</td>
       <td>
         <span class='toggler-content default active'>
           <% if @current_member.api_id.present? %>
