--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -246,7 +246,7 @@
 
           <tr>
             <th><%= t('activerecord.attributes.member.cancel_date') %>:</th>
-            <td><%= I18n.l(@current_member.cancel_date, :format => :dashed) unless @current_member.cancel_date.nil? %></td>  
+            <td id="td_mi_cancel_date"><%= @current_member.cancel_date unless @current_member.cancel_date.nil? %></td>  
           </tr>
   
           <tr class="ligthgrey">
