--- a/app/views/clubs/index.html.erb
+++ b/app/views/clubs/index.html.erb
@@ -2,8 +2,10 @@
 
 <div class="page-header">
   <h1> <%=t '.title', :default => model_class.model_name.human.pluralize %> </h1>
+  <% if can? :create, Club %>
     <%= link_to(new_club_path, :class => "btn btn-primary btn_on_header") do %> 
       <i class="icon-plus"></i> New Club
+    <% end %>
   <% end %>
 </div>
 
