ref#22270-Updated member#search. Now it can be search with external_id, if clubs requires it.

--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -159,6 +159,16 @@
                           
                     </td>
                   </tr>
+                  <% if @current_club.requires_external_id %>
+                  <tr>
+                    <td> <%= t('activerecord.attributes.member.external_id') %></td>
+                    <td>
+                      <%= text_field :member, :external_id, :class => 'text-field',
+                                     :value => (params[:member][:external_id] if params[:member]) %> 
+                          
+                    </td>
+                  </tr>
+                  <% end %>
               </table>
             </td>
         </tr>
