ref#22262-Added uniq on member's search result and also fixed notes field label.

--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -146,7 +146,7 @@
                   </td>
                 </tr>
                 <tr>
-                  <td><%= t('activerecord.notes') %> <%= t('activerecord.attributes.notes') %></td>
+                  <td><%= t('activerecord.attributes.member.member_notes') %></td>
                   <td>
                     <%= text_field :member, :notes, :class => 'text_field',
                                    :value => (params[:member][:notes] if params[:member]) %> 
