--- a/app/views/clubs/_form.html.erb
+++ b/app/views/clubs/_form.html.erb
@@ -48,6 +48,12 @@
       <%= f.check_box :requires_external_id, :class => 'check_box' %>
     </div>
   </div>
+  <div class="control-group">
+    <%= f.label :time_zone, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.time_zone_select(:time_zone) %>
+    </div>
+  </div>
 
   <div class="form-actions">
     <%= f.submit nil, :class => 'btn btn-primary' %>
