fixes #22278 * adds admin in seeds (admin : xagax2012) * Club#name uniqueness validation needs scope * make attributes Club#api_type and TOM#club_cash_amount accessible * fix typo

--- a/app/views/clubs/_form.html.erb
+++ b/app/views/clubs/_form.html.erb
@@ -13,6 +13,12 @@
     </div>
   </div>
   <div class="control-group">
+    <%= f.label :api_type, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.select :api_type, [['Drupal', 'Drupal::Member']], include_blank: true %>
+    </div>
+  </div>
+  <div class="control-group">
     <%= f.label :api_username, :class => 'control-label' %>
     <div class="controls">
       <%= f.text_field :api_username, :class => 'text_field' %>
