ref#21771-Fixed reports.

--- a/app/views/fulfillments/_report_result.html.erb
+++ b/app/views/fulfillments/_report_result.html.erb
@@ -1,4 +1,14 @@
 <% if @fulfillments %>
+  
+  <% if @status == 'processing' %>
+    <%= form_for(generate_csv_fulfillments_path() ) do %>
+      <%= hidden_field :status, nil ,:value => @status %>
+      <%= submit_tag t('buttons.generate_csv'), :class => 'btn btn-primary' %> 
+    <% end %>
+  <% end %>
+
+
+
   <table class="table table-bordered table-condensed">
   	<thead>
   	  <th> <%= t('activerecord.attributes.fulfillment.id') %> </th>
@@ -20,14 +30,14 @@
     			<td> <%= fulfillment.product_sku %> </td>
     			<td> <%= fulfillment.tracking_code %> </td>
     			<td> <%= fulfillment.status %> </td>
-          <td NOWRAP id="td_<%= fulfillment.member.id %>"> 
+          <td NOWRAP> 
       			<% if fulfillment.processing? %>
               <% unless fulfillment.member.wrong_address %>
                 <%= link_to 'Mark as sent', '#', :id => "mark_as_sent", :name => fulfillment.id, :class=> "btn btn-small" %>
               <%= link_to 'Set as wrong address','#', :id => "set_as_wrong_address", 
                   :name => fulfillment.member.visible_id, :class=> "btn btn-small", :remote => true %>
             	<% else %>
-            		<%= t('activerecord.attributes.member.undeliverable') %>
+            		<%= link_to t('activerecord.attributes.member.undeliverable'), show_member_path(:member_prefix => fulfillment.member.visible_id) %>
             	<% end %>
       			<% elsif fulfillment.out_of_stock? %>
               Actual stock: <%= fulfillment.product.stock unless fulfillment.product.nil? %>. <%= link_to 'Resend','#', :id => 'resend', :name => fulfillment.id ,:class=> "btn btn-small" %>
