--- a/app/views/members/_set_undeliverable_form.html.erb
+++ b/app/views/members/_set_undeliverable_form.html.erb
@@ -2,8 +2,6 @@
 
 <%= form_for(member_set_undeliverable_path(@current_partner.prefix,@current_club.name,@current_member), 
     :html => {:id => "set_undeliverable", :name => @current_member.visible_id} ) do %>
-        <%= label :reason, t('reason'), :class => 'help-inline' %> 
-        <%= text_field_tag "reason",nil ,:class => 'text_field input-medium' %>
-        <%= submit_tag t('buttons.set_wrong_addres'), :class => 'btn btn-primary', 
-                               :confirm => t('are_you_sure') %> 
+        <%= text_field_tag "reason",nil ,:class => 'text_field input-medium', :placeholder => t('reason') %>
+        <%= submit_tag t('buttons.set_wrong_address'), :class => 'btn btn-primary', :confirm => t('are_you_sure') %> 
 <% end %>
