--- a/app/views/members/_form.html.erb
+++ b/app/views/members/_form.html.erb
@@ -46,7 +46,7 @@
           <td> 
             <%= f.text_field :address, :class => 'text_field' %> 
             <% if !@member.new_record? && !@member.wrong_address.nil? %>
-              <%= t('activerecord.attributes.member.unset_wrong_address') %>
+              <br><%= t('activerecord.attributes.member.unset_wrong_address') %>
               <%= check_box :setter, :wrong_address %>
             <% end %>
           </td>  
