ref#21771-Added integration tests

--- a/app/views/fulfillments/_report_result.html.erb
+++ b/app/views/fulfillments/_report_result.html.erb
@@ -7,7 +7,7 @@
     <% end %>
   <% end %>
 
-  <table class="table table-bordered table-condensed">
+  <table class="table table-bordered table-condensed" id="report_results">
   	<thead>
   	  <th> <%= t('activerecord.attributes.member.visible_id') %> </th>
       <th> <%= t('activerecord.attributes.fulfillment.member') %> </th>
