--- a/app/views/fulfillments/index.html.erb
+++ b/app/views/fulfillments/index.html.erb
@@ -22,6 +22,7 @@
 	  	  <%= check_box nil, :all_times, :checked => (true if params[:all_times]=='1') %> 
   		</td>
   		<td>
+        <%= label :status, t('activerecord.attributes.fulfillment.status'), :class => 'help-inline' %>
         <%= select_tag :status, options_for_select([['not_processed', 'not_processed'],
                                 ['processing', 'processing'],['out_of_stock', 'out_of_stock'], 
                                 ['undeliverable','undeliverable']], :selected => params[:status]),
