ref#22187-Added id on tables to make easier the testing.

--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -13,7 +13,7 @@
   <div class="row-fluid">
 
     <div class="span4">
-      <table class="table table-bordered table-condensed table-nohover">
+      <table class="table table-bordered table-condensed table-nohover" id="personal_details">
         <thead>
           <tr class="box_title"><th><h4>Personal Details</h4></th></tr>
         </thead>
@@ -83,7 +83,7 @@
 
     <div class="span4">
       
-      <table class="table table-bordered table-condensed table-nohover">
+      <table class="table table-bordered table-condensed table-nohover" id="contact_details">
         <thead>
           <tr class="box_title"><th><h4>Contact Details</h4></th></tr>
         </thead>
@@ -124,7 +124,7 @@
     </div><!--/span-->
     <div class="span4">
       
-      <table  class="table table-bordered table-condensed table-nohover">
+      <table  class="table table-bordered table-condensed table-nohover" id="payment_details">
         <thead>
           <tr class="box_title"><th><h4>Payment Details</h4></th></tr>
         </thead>
