ref#22187-Updated tests and fixed unset unreachable address when changing address.

--- a/app/views/members/set_undeliverable.html.erb
+++ b/app/views/members/set_undeliverable.html.erb
@@ -1,5 +1,5 @@
 <%= render :partial => "shared/member_information" %>
-<table class="table table-bordered">
+<table class="table table-bordered" id="undeliverable_table">
   <thead>
   	<tr>
       <th>
