--- a/app/views/members/set_unreachable.html.erb
+++ b/app/views/members/set_unreachable.html.erb
@@ -1,7 +1,7 @@
 <%= render :partial => "shared/member_information" %>
 
 <%= form_for(member_set_unreachable_path) do %>
-  <table class="table table-bordered">
+  <table class="table table-bordered" id="unreachable_table">
     <thead>
     <tr>
       <th>
