--- a/app/views/members/_form.html.erb
+++ b/app/views/members/_form.html.erb
@@ -127,8 +127,8 @@
             <%= f.text_field :phone_area_code, :class => 'text_field input-mini' %> 
             <%= f.text_field :phone_local_number, :class => 'text_field input-mini' %> 
             <% if !@member.new_record? && !@member.wrong_phone_number.nil? %>
-              <%= t('activerecord.attributes.member.unset_wrong_phone_number') %>
-              <%= check_box :setter, :wrong_phone_number %>
+            <br><%= t('activerecord.attributes.member.unset_wrong_phone_number') %>
+                <%= check_box :setter, :wrong_phone_number %>
             <% end %>
           </td>  
         </tr>
